--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 body {
   font-size: 16px;
   font-family: "Inter","Inter UI",-apple-system,BlinkMacSystemFont,'San Francisco','Helvetica Neue',Arial,sans-serif;
+  margin: 0;
 }
 
 .modal {
@@ -19,14 +20,19 @@ body {
 }
 
 .container {
-  height: 100vh;
-  width: 100vw;
+  min-height: 100vh;
+  min-width: 100vw;
 
   form {
     background-color: $form-background;
     min-height: 18rem;
     width: 30rem;
     border-radius: 1rem;
+    margin-top: 3rem;
+    @media screen and (max-width: 767px) {
+      margin-top: 1rem;
+      width: 26rem;
+    }
 
     .form-header {
       display: flex;
@@ -70,6 +76,7 @@ body {
       .value {
         font-size: 2.5rem;
         font-weight: bold;
+        width: 6.5rem;
 
         &.star {
           color: $star-green;
@@ -83,7 +90,7 @@ body {
   }
 
   .amount {
-    width: 15rem;
+    width: 14.1rem;
     padding: 0rem 0.75rem;
     font-size: 2.5rem;
     font-weight: bold;
@@ -101,6 +108,13 @@ body {
       color: $star-green;
     }
   }
+}
+
+.form-holder {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .swap-form {
@@ -150,6 +164,10 @@ body {
   flex-direction: column;
   margin-left: 3rem;
 
+  @media screen and (max-width: 767px) {
+    margin-left: 1rem;
+  }
+
   .exchange-rate {
     margin: 1rem 0rem;
     color: rgba(0,0,0,0.6);
@@ -160,6 +178,10 @@ body {
   display: flex;
   flex-direction: column;
   margin-left: 3rem;
+
+  @media screen and (max-width: 767px) {
+    margin-left: 1rem;
+  }
 
   .exchange-rate {
     margin: 1rem 0rem;
@@ -178,6 +200,10 @@ button.trade-button {
   font-size: 1.5rem;
   height: 4rem;
   border: none;
+
+  @media screen and (max-width: 767px) {
+    width: 26rem;
+  }
 
   &.star {
     background-color: $star-green;
