--- a/src/components/Header/HeaderBar.scss
+++ b/src/components/Header/HeaderBar.scss
@@ -8,6 +8,16 @@
   padding: 0.5rem 2rem;
   text-align: center;
 
+  @media screen and (max-width: 767px) {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0.5rem 1rem;
+
+    .treasury {
+      margin-bottom: 1rem;
+    }
+  }
+
   .treasury {
     background-color: $form-background;
     padding: 0.5rem 1rem;
