--- a/src/App.scss
+++ b/src/App.scss
@@ -469,3 +469,10 @@ form.confirmation-form {
     }
   }
 }
+
+.layout-container {
+  width: 100vw;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+}
