--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,7 @@ body {
   font-size: 16px;
   font-family: "Inter","Inter UI",-apple-system,BlinkMacSystemFont,'San Francisco','Helvetica Neue',Arial,sans-serif;
   margin: 0;
-}
+};
 
 .modal {
   display: flex;
