--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,9 +1,9 @@
 $form-background: #F4F3F1;
 $form-dark-background: #e5e5e5;
 $form-grey-text: #9a9a9a;
-$yellow: rgba(255, 199, 0, 1);
-$star-green: rgba(0, 177, 113, 1);
+$yellow: #F6B451;
+$star-green: #51D721;
 $washed-green: rgba(0, 159, 101, 0.05);
-$dust-blue: rgba(33, 157, 255, 1);
+$dust-blue: #A9ECF5;
 $washed-blue: rgba(33, 157, 255, 0.05);
 $hover-20: rgba(0,0,0,0.2);
