--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&text=↑→↓←↗&family=Source+Code+Pro:wght@400;500;600;700;800&display=swap");
+
 @import './styles/variables.scss';
 
 * {
@@ -6,7 +8,7 @@
 
 body {
   font-size: 16px;
-  font-family: "Inter","Inter UI",-apple-system,BlinkMacSystemFont,'San Francisco','Helvetica Neue',Arial,sans-serif;
+  font-family: "Inter", "Inter UI",-apple-system,BlinkMacSystemFont,'San Francisco','Helvetica Neue',Arial,sans-serif;
   margin: 0;
 };
 
@@ -508,7 +510,6 @@ form.confirmation-form {
 
 h2 {
   //styleName: Sans/H2;
-  font-family: Inter;
   font-size: 24px;
   font-style: normal;
   font-weight: 600;
@@ -517,9 +518,16 @@ h2 {
   text-align: left;
 }
 
+.hero-text {
+  font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 32px;
+    letter-spacing: -0.03em;
+}
+
 h3, .gray-title {
   //styleName: Sans/H2;
-  font-family: Inter;
   font-size: 16px;
   font-style: normal;
   font-weight: 600;
@@ -549,7 +557,6 @@ h3, .gray-title {
     color: black;
     text-decoration: none;
     //styleName: Sans/H3;
-    font-family: Inter;
     font-size: 16px;
     font-style: normal;
     font-weight: 600;
@@ -596,7 +603,6 @@ h3, .gray-title {
   }
 
   .hero-rect {
-    font-family: Inter;
     font-size: 20px;
     font-style: normal;
     font-weight: 500;
@@ -642,7 +648,6 @@ h3, .gray-title {
     padding: 0;
     margin: 0;
     //styleName: Sans / UI + Control;
-    font-family: Inter;
     font-size: 16px;
     font-style: normal;
     font-weight: 600;
@@ -656,7 +661,6 @@ h3, .gray-title {
     padding: 0;
     margin: 0;
     //styleName: Sans / UI + Control;
-    font-family: Inter;
     font-size: 16px;
     font-style: normal;
     font-weight: 600;
