--- a/src/components/Header/HeaderBar.scss
+++ b/src/components/Header/HeaderBar.scss
@@ -14,88 +14,34 @@
     align-items: flex-start;
     padding: 0.5rem 1rem;
 
-    // .treasury {
-    //   margin-bottom: 1rem;
-    // }
-  }
-
-  // .treasury {
-  //   background-color: $form-background;
-  //   padding: 0.5rem 1rem;
-  //   border-radius: 0.25rem;
-  // }
-
-  .wallet-display {
-    background-color: $form-background;
-    border-radius: 0.25rem;
-
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    align-items: center;
-
-    .eth-balance {
-      padding: 0.5rem 1rem;
-      border-radius: 0.25rem;
-    }
-
-    .address {
-      padding: 0.5rem 1rem;
-      border-radius: 0.25rem;
-
-      &:hover {
-        cursor: pointer;
-        background-color: $hover-20;
-      }
-    }
-
-    &.error {
-      background-color: rgba(168, 27, 27, 1);
-      padding: 0.5rem 2rem;
-
-      .error-icon {
-        color: white;
-      }
-
-      .error-message {
-        color: white;
-        font-size: 1rem;
-        margin-left: 1rem;
-      }
-    }
-
-    .refresh {
-      border-radius: 0.25rem;
-      padding: 0.5rem;
-      cursor: pointer;
-
-      &:hover {
-        background-color: $hover-20;
-      }
-    }
   }
 }
 
 .homeHeader {
   width: 100%;
-  display: flex;
-  justify-content: center;
-}
 
-.homeHeader .innerCol {
-  width: 66.6667%;
-  display: flex;
-  justify-content: space-between;
-  margin-top: 4em;
-  max-width: 60em;
-
-  @media screen and (max-width: 767px) {
-    margin-top: 3em;
-    width: 80.0%;
+  .innerCol {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 2em;
+  
+    @media screen and (max-width: 767px) {
+      margin-top: 3em;
+    }
   }
-}
 
-.homeHeader nav {
-  display: flex;
-  // align-items: center;
+  .treasury {
+    background-color: $yellow;
+    margin-left: 8px;
+  }
+
+  .walletSection {
+    margin-left: 3rem;
+  }
+
+  nav {
+    display: flex;
+    // align-items: center;
+  }
 }
