max width for wallet selector

--- a/src/App.scss
+++ b/src/App.scss
@@ -296,6 +296,7 @@ button.trade-button {
 form.wallet-form {
   padding: 1rem;
   background-color: white;
+  max-width: 30rem;
 
   .metamask-warning {
     margin-bottom: 2rem;
