--- a/src/App.scss
+++ b/src/App.scss
@@ -556,6 +556,22 @@ form.confirmation-form {
   }
 }
 
+.app-layout {
+  width: 100%;
+  max-width: 60em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 2em;
+  padding-bottom: 2em;
+
+  @media screen and (max-width: 767px) {
+    padding-top: 1em;
+    padding-bottom: 1em;
+  }
+}
+
 h2 {
   //styleName: Sans/H2;
   font-size: 24px;
