--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -12,3 +12,4 @@ $medium-grey: rgba(153, 153, 153, 1);
 $steel-grey: rgba(77, 77, 77, 1);
 $preview-gold: rgba(243, 194, 99, 1);
 $preview-gold-light: rgba(243, 194, 99, 0.1);
+$fontFamily: "Inter", "Inter UI", -apple-system, BlinkMacSystemFont, 'San Francisco', 'Helvetica Neue', Arial, sans-serif;
