--- a/src/components/Header/HeaderBar.scss
+++ b/src/components/Header/HeaderBar.scss
@@ -20,11 +20,16 @@
 .homeHeader {
   width: 100%;
 
+  @media (max-width: 899px) {
+    max-width: 576px;
+  }
+
   .innerCol {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
-    margin-top: 2em;
+    margin-top: 5.5em;
     
     @media screen and (max-width: 767px) {
       margin-top: 3em;
@@ -38,6 +43,15 @@
 
   .walletSection {
     margin-left: 3rem;
+
+    @media (max-width: 899px) {
+      margin-left: 0;
+      margin-top: 1rem;
+    }
+
+    @media (max-width: 599px) {
+      width: 100%;
+    }
   }
 
   nav {
