--- a/src/components/Header/WalletDisplay.scss
+++ b/src/components/Header/WalletDisplay.scss
@@ -2,59 +2,30 @@
 
 .walletSection {
   .wallet-display {
-    padding-left: 0;
-    padding-right: 0;
-  
-    &.connect {
-      .address-refresh {
-        background-color: white;
-        .address {
-          border-radius: 24px;
-          background-color: black;
-      
-          span {
-            color: white;
-          }
-        }
-      }
-    }
+    padding: 0;
   
     .eth-balance {
-      padding: 0 12px 0 24px;
-      border-radius: 0.25rem;
       color: $medium-grey;
     }
   
     .wstr-balance {
-      padding: 0 12px;
       color: $dark-grey;
     }
   
-    .star-balance {
-      padding: 0 12px;
-    }
-  
     .address-refresh {
-      border-top-right-radius: 30px;
-      border-bottom-right-radius: 30px;
+      align-items: center;
+      padding: 0.75rem 0.75rem 0.75rem 1.5rem;
+      font-weight: 600;
+      border-top-right-radius: 999px;
+      border-bottom-right-radius: 999px;
       background-color: $form-dark-background;
-  
-      .address {
-        padding: 0.75rem;
-        cursor: pointer;
-    
-        &:hover {
-          background-color: $hover-20;
-        }
+      
+      &:hover {
+        background-color: $hover-20;
       }
   
       .refresh {
-        cursor: pointer;  
-        padding: 0.75rem;
-        margin-right: 16px;
-        height: 46px;
-        width: 46px;
-  
+        margin-left: .5rem;
         &:hover {
           background-color: $hover-20;
         }
@@ -75,5 +46,26 @@
         margin-left: 1rem;
       }
     }
+
+    @media (max-width: 599px) {
+      flex-direction: column-reverse;
+      align-items: start;
+      width: 100%;
+      font-size: 14px;
+      padding: 1rem;
+      border-radius: 24px;
+
+      .address-refresh {
+        padding: .5rem .75rem;
+        margin-bottom: .5rem;
+        border-radius: 999px;
+      }
+    }
+  }
+
+  .connect-wallet {
+    padding: .5rem 1.5rem;
+    background-color: black;
+    color: white;
   }
 }
