--- a/src/components/Results/ResultsDisplays.scss
+++ b/src/components/Results/ResultsDisplays.scss
@@ -2,7 +2,8 @@
 
 .display-container {
   background-color: white;
-  width: 26rem;
+  width: 100%;
+  max-width: 26rem;
   padding: 1rem 2rem;
   border-radius: 1rem;
   display: flex;
