--- a/src/App.scss
+++ b/src/App.scss
@@ -703,11 +703,11 @@ h3, .gray-title {
   .hero-rect {
     width: 100%;
     height: 540px;
-    background-color: #F2F2F2;
     padding: 2em;
     position: relative;
     border-radius: 24px;
-
+    background-size: cover;
+    background-color: black;
   }
 
   .hero-rect .inner-text {
@@ -715,6 +715,7 @@ h3, .gray-title {
     bottom: 0;
     left: 0;
     padding: 2em;
+    color: white;
   }
 
   .hero-rect .logo {
@@ -927,5 +928,110 @@ button:hover {
 .button-bg-black {
   background-color: black;
   color: white;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+
+.header-bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 2rem;
+  margin-top: 3em;
+  text-align: center;
+
+  @media screen and (max-width: 767px) {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0.5rem 1rem;
+
+  }
+}
+
+.homeHeader {
+  width: 100%;
+
+  @media (max-width: 899px) {
+    max-width: 576px;
+  }
+
+  .innerCol {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 1rem;
+    margin-top: 5.5em;
+    
+    @media screen and (max-width: 767px) {
+      margin-top: 3em;
+    }
+  }
+
+  .treasury {
+    background-color: $yellow;
+    text-align: center;
+    cursor: pointer;
+
+    .modal {
+      cursor: default;
+      
+      .message-container {
+        display: flex;
+        flex-direction: column;
+        // justify-content: space-between;
+        align-items: flex-start;
+        padding: 36px;
+        position: absolute;
+        width: 400px;
+        height: 320px;
+        left: 35px;
+        top: 86px;
+        background: #F3C263;
+        border-radius: 24px;
+        text-align: left;
+
+        .title {
+          font-size: 16px;
+          font-weight: 600;
+          line-height: 24px;
+          color: $steel-grey;
+          margin-bottom: 24px;
+        }
+
+        .message, .stars {
+          font-size: 24px;
+          font-weight: 600;
+          line-height: 32px;
+          color: $steel-grey;
+
+          .stars {
+            color: black;
+          }
+        }
+      }
+    }
+  }
+
+  .walletSection {
+    margin-left: 3rem;
+
+    @media (max-width: 899px) {
+      margin-left: 0;
+    }
+
+    @media (max-width: 599px) {
+      width: 100%;
+    }
+  }
+
+  nav {
+    display: flex;
+    // align-items: center;
+  }
 }
 
