fix timer jitter

--- a/src/App.scss
+++ b/src/App.scss
@@ -1043,9 +1043,9 @@ button:hover {
   padding-bottom: 0.5em;
   border-radius: 99em;
   font-weight: 500;
-  width: 290px;
+  width: 275px;
   display: flex;
-  justify-content: center;
+  // justify-content: center;
 }
 
 .timer p b {
