timer reflow bugfix

--- a/src/App.scss
+++ b/src/App.scss
@@ -1043,8 +1043,8 @@ button:hover {
   padding-bottom: 0.5em;
   border-radius: 99em;
   font-weight: 500;
-  width: 275px;
-  display: flex;
+  width: 284px;
+  display: block;
 }
 
 .timer p b {
