--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&text=↑→↓←↗?family=Source+Code+Pro:wght@400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;500;600;700;800&display=swap");
+@import url('https://rsms.me/inter/inter.css');
 
 
 @import './styles/variables.scss';
