--- a/src/App.scss
+++ b/src/App.scss
@@ -1044,8 +1044,8 @@ button:hover {
   padding-bottom: 0.5em;
   border-radius: 99em;
   font-weight: 500;
-  width: 284px;
-  display: block;
+  // width: 284px;
+  display: table;
 }
 
 .timer p b {
