Refactor of the deposit logic

--- a/src/App.scss
+++ b/src/App.scss
@@ -381,6 +381,7 @@ form.master-ticket-form {
   background-color: $form-background;
   display: flex;
   flex-direction: column;
+  min-width: 400px;
 
   button.close {
     background-color: $form-background;
