Added loading text

--- a/src/App.scss
+++ b/src/App.scss
@@ -496,6 +496,7 @@ form.confirmation-form {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     margin-top: 1rem;
 
     .left {
