--- a/src/components/Forms/Dropdown.scss
+++ b/src/components/Forms/Dropdown.scss
@@ -1,3 +1,12 @@
+.dropdown-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 0;
+}
+
 .dropdown {
   font-size: 14px;
   position: relative;
