--- a/src/App.scss
+++ b/src/App.scss
@@ -1079,3 +1079,12 @@ button:hover {
 .ml-0\.25em {
   margin-left: 0.25em;
 }
+
+.button-lg {
+  width: 100%;
+  border-radius: 1.5rem;
+  font-size: 1.25rem;
+  font-weight: 600;
+  height: 5rem;
+  border: none;
+}
