confirmation form and gas picker UI polish

--- a/src/components/Forms/FeeDropdown.scss
+++ b/src/components/Forms/FeeDropdown.scss
@@ -27,11 +27,13 @@
 
           .label {
             margin-right: 8px;
+            font-weight: 500;
           }
 
           .custom-input {
             text-align: right;
             height: 24px;
+            max-width: 100px;
           }
 
           .unit {
