--- a/src/components/Header/WalletDisplay.scss
+++ b/src/components/Header/WalletDisplay.scss
@@ -14,7 +14,10 @@
   
     .address-refresh {
       align-items: center;
-      padding: 0.75rem 0.75rem 0.75rem 1.5rem;
+      height: 48px;
+      padding-left: 1em;
+      padding-right: 0.25em;
+      // padding: 0.75rem 0.75rem 0.75rem 1.5rem;
       font-weight: 600;
       border-top-right-radius: 999px;
       border-bottom-right-radius: 999px;
@@ -25,6 +28,10 @@
       }
   
       .refresh {
+        width: 2em;
+        height: 2em;
+        border-radius: 999px;
+        padding:0.5em;
         margin-left: .5rem;
         &:hover {
           background-color: $hover-20;
